--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,12 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  card_swiper: ^2.0.4
+  dio: ^5.2.1+1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_riverpod: ^2.3.6
   go_router: ^8.0.5
 
 dev_dependencies:
