--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
   path_provider: ^2.0.15
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -32,3 +33,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/loaders/
