--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   go_router: ^8.0.5
   intl: ^0.18.1
-  isar: ^3.0.5
-  isar_flutter_libs: ^3.0.5
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
   youtube_player_flutter: ^8.1.2
 
@@ -27,7 +27,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.0.5
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
