--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_native_splash: ^2.3.1
   flutter_riverpod: ^2.3.6
   flutter_staggered_grid_view: ^0.6.2
   go_router: ^8.0.5
@@ -24,13 +25,35 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
+  change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   isar_generator: ^3.1.0+1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app-icon.png"
+  min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#eeeeee" 
+  image: "assets/icon/app-icon.png"
+  color_dark: "#000000"
+  image_dark: "assets/icon/app-icon.png"
+  android_12:
+    color: "#eeeeee"
+    image: "assets/icon/app-icon.png"
+    color_dark: "#000000"
+    image_dark: "assets/icon/app-icon.png"
+   
+ 
 
 flutter:
   uses-material-design: true
   assets:
     - .env
     - assets/loaders/
+    - assets/icon/
